# Clinical-Management-Application

./: .gitignore  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  sample.env
apps/: __init__.py
apps/accounts/: managers.py  models.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py
apps/catalog/: admin.py  models.py
apps/catalog/migrations/: 0001_initial.py  0002_alter_proceduretype_options.py
apps/clinical/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/clinical/migrations/: 0001_initial.py  0002_alter_clinician_options_alter_department_options_and_more.py
apps/clinical/tests/: conftest.py  test_api_department.py  test_api_patients.py
apps/core/: constants.py  managers.py  models.py  pagination.py  permissions_helpers.py
apps/core/management/commands/: seed_sample_data.py
apps/scheduling/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/scheduling/migrations/: 0001_initial.py
apps/scheduling/tests/: conftest.py  test_api_procedures.py  test_api_procedures_schedules.py
clinicapp/: asgi.py  settings.py  urls.py
clinicapp/clinicapp/: settings.py  wsgi.py
docs/: SEEDING.md
